--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <p>TUTORIAL DE GIT</p>
+    
+    Pasos del git
+    <ol>
+        <li>Instalar git -> git init</li>
+    </ol>
 </body>
 </html>
