--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     Pasos del git
     <ol>
         <li>Instalar git -> git init</li>
+        <li>Configurar git</li>
     </ol>
 </body>
 </html>
