--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ol>
         <li>Instalar git -> git init</li>
         <li>Configurar git</li>
+        <li>Nuevos cambios</li>
     </ol>
 </body>
 </html>
